# blog-bff

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml
src/blog_bff/: __main__.py
src/blog_bff/application/common/: query_handler.py
src/blog_bff/application/models/: author.py  comment.py  post.py
src/blog_bff/application/ports/: comments_gateway.py  post_gateway.py
src/blog_bff/application/queries/: load_post_comments.py  load_posts.py  load_user_posts.py
src/blog_bff/bootstrap/: config.py  container.py  providers.py
src/blog_bff/bootstrap/entrypoints/: api.py  cli.py
src/blog_bff/infrastructure/: comment_gateway.py  comment_loader.py  post_gateway.py  post_loader.py  profile_loader.py  response_models.py
src/blog_bff/infrastructure/query_bus/: dishka_resolver.py  query_sender.py  registry.py
src/blog_bff/presentation/api/: exception_handlers.py
src/blog_bff/presentation/api/routers/: posts.py  (+2 more)
src/posts_bff/: __main__.py
src/posts_bff/application/common/: query.py  query_handler.py
src/posts_bff/application/models/: post.py  post_creator.py
src/posts_bff/application/ports/: post_gateway.py
src/posts_bff/application/queries/: load_post_by_id.py  load_posts.py
src/posts_bff/bootstrap/: config.py  container.py  providers.py
src/posts_bff/bootstrap/entrypoints/: api.py  cli.py
src/posts_bff/infrastructure/: post_gateway.py  post_loader.py  profile_loader.py  response_models.py
src/posts_bff/infrastructure/query_bus/: dishka_resolver.py  query_sender.py  registry.py
src/posts_bff/presentation/api/: exception_handlers.py
(+5 files in other folders)
