[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "profile-post-bff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b9",
    "aiohttp>=3.11.16",
    "click>=8.1.8",
    "dishka>=1.5.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
posts_bff = "posts_bff.bootstrap.entrypoints.cli:main"
